# agsm-middleware

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
agsm_middleware/: config.py  main.py
agsm_middleware/api/routers/: __init__.py  categories.py  configs.py  events.py  games.py  servers.py
agsm_middleware/crud/: __init__.py  crud.py
agsm_middleware/database/: connection.py
agsm_middleware/models/: __init__.py  models.py
agsm_middleware/schemas/: __init__.py  schemas.py
alembic/: env.py
alembic/versions/: 248331da54b3_insert_initial_categories_and_games.py  b46278e60d4b_initial_migration.py
migrations/: 20241217202504_create_initial_tables.sql  20241218133530_create_config_table.sql  20241218154847_insert_default_categories.sql  20241218192538_create_event_log.sql
