[tool.poetry]
name = "agsm-middleware"
version = "0.1.0"
description = ""
authors = ["Okan Celik <okan.celik@cgi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
fastapi = "^0.115.6"
uvicorn ={ version = "^0.34.0", extras = ["standard"] }
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic-settings = "^2.7.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
